# corapan-webapp

./: .cline.json  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .htmlhintrc  .zenodo.json  AGENTS.md  BESTANDSAUFNAHME_DATATABLES_VERGLEICH.md  BESTANDSAUFNAHME_OFFENE_PUNKTE.md  BESTANDSAUFNAHME_SIMPLE_VS_ADVANCED.md  CHANGELOG-DOCS.md  CITATION.cff  COMMIT_MESSAGE_STAGE3.txt  COMPLETION_SUMMARY.md  DEV-NOTE-AUTH-MIGRATION.md  Dockerfile  FINAL_REPORT.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION.md  Makefile  README.md  SANITY_CHECKS.md  VALIDATION_CHECKLIST.md  VERIFICATION_REPORT.md  app.py  auth.db  blacklab_logs.txt  blacklab_response_debug.json  build_index_wrapper.ps1  debug_repo_root.py  debug_test_client.py  deploy_test.ps1  docker-compose.dev-postgres.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  export_log.txt  (+27 more)
.github/: copilot-instructions.md
app/: .env.example  AGENTS.md  CITATION.cff  Dockerfile  Makefile  README.md  docker-compose.dev-postgres.yml  package.json  passwords.env.template  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  startme.md
data/: .gitkeep
docs/: CHANGELOG.md  CONTRIBUTING.md  DOCMETA_INTEGRATION_REPORT.md  DeleteObsoleteDocumentation.md  DocumentationSummary.md  EEUU-Standardisierung-Report.md  RootDirectoryDocumentationAnalysis.md  annotation_data_future_use.md  architecture.md  auth-flow.md  blacklab-advanced-search-status.md  blacklab_local.md  blacklab_stack.md  checkup.md  deploy_plan.md  deployment.md  index.md  (+9 more)
(+1197 files in other folders)
